# filecrafter-core

./: pyproject.toml
src/filecrafter/core/processors/: base.py  document.py
tests/: test_base_processor.py
