[project]
name = "filecrafter-core"
version = "0.1.0"
description = "Core processing engine for FileCrafter"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.1.0",
    "PyPDF2>=3.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]